{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 448,
  "lineage": "a79ec9be-90e8-7cf1-6a71-6d1e21abe27d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e303185d6a56f978",
            "arn": "arn:aws:ec2:us-west-1:019721216575:elastic-ip/eipalloc-0e303185d6a56f978",
            "association_id": "eipassoc-0a517873b7a2016dc",
            "domain": "vpc",
            "id": "eipalloc-0e303185d6a56f978",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0b0bbab8495b2997b",
            "private_dns": "ip-10-0-3-92.us-west-1.compute.internal",
            "private_ip": "10.0.3.92",
            "public_dns": "ec2-52-9-243-196.us-west-1.compute.amazonaws.com",
            "public_ip": "52.9.243.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "nat_eip",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "nat_eip",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:internet-gateway/igw-0d0fc447daeed8bbc",
            "id": "igw-0d0fc447daeed8bbc",
            "owner_id": "019721216575",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "main_igw",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "main_igw",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e303185d6a56f978",
            "association_id": "eipassoc-0a517873b7a2016dc",
            "connectivity_type": "public",
            "id": "nat-0a08d4af54e0febb8",
            "network_interface_id": "eni-0b0bbab8495b2997b",
            "private_ip": "10.0.3.92",
            "public_ip": "52.9.243.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08e8947f0a3154207",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "main_nat",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "main_nat",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:route-table/rtb-043361260ed2c41f9",
            "id": "rtb-043361260ed2c41f9",
            "owner_id": "019721216575",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a08d4af54e0febb8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "private_rt",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "private_rt",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:route-table/rtb-0da51e07786e52057",
            "id": "rtb-0da51e07786e52057",
            "owner_id": "019721216575",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0fc447daeed8bbc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "public_rt",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "public_rt",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd67e11e39199e36",
            "route_table_id": "rtb-043361260ed2c41f9",
            "subnet_id": "subnet-0e967282ee3d33c2c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d78a239ed0996a0",
            "route_table_id": "rtb-043361260ed2c41f9",
            "subnet_id": "subnet-013f11e6358e034b0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098ff69556e576873",
            "route_table_id": "rtb-0da51e07786e52057",
            "subnet_id": "subnet-08e8947f0a3154207"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096c8bb27e7b28b3e",
            "route_table_id": "rtb-0da51e07786e52057",
            "subnet_id": "subnet-0ce029bb54d7af767"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:security-group/sg-09376c9fc4828c09e",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09376c9fc4828c09e",
            "ingress": [],
            "name": "lambda_sg",
            "name_prefix": "",
            "owner_id": "019721216575",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "lambda_sg",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "lambda_sg",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:security-group/sg-0bae71043e416bc32",
            "description": "Allow inbound traffic on port 5432 (PostgreSQL) from Lambda only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bae71043e416bc32",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09376c9fc4828c09e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "019721216575",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "rds_sg",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "rds_sg",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:security-group/sg-0a6a673e6849c7d5b",
            "description": "Allow Lambda SG access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6a673e6849c7d5b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09376c9fc4828c09e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-sg",
            "name_prefix": "",
            "owner_id": "019721216575",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "vpce-sg",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "vpce-sg",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:subnet/subnet-0e967282ee3d33c2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e967282ee3d33c2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019721216575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "private_subnet_1",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "private_subnet_1",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:subnet/subnet-013f11e6358e034b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013f11e6358e034b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019721216575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "private_subnet_2",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "private_subnet_2",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:subnet/subnet-08e8947f0a3154207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e8947f0a3154207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019721216575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "public_subnet_1",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "public_subnet_1",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:subnet/subnet-0ce029bb54d7af767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce029bb54d7af767",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019721216575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "public_subnet_2",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "public_subnet_2",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:vpc/vpc-0892f7605b79f0120",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009841a8c01765cc8",
            "default_route_table_id": "rtb-0d955f195e7425586",
            "default_security_group_id": "sg-019b8f664a4a8dc39",
            "dhcp_options_id": "dopt-04d3fb68b08b5dc44",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0892f7605b79f0120",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d955f195e7425586",
            "owner_id": "019721216575",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "main_vpc",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "main_vpc",
              "Project": "CoveApp",
              "awsApplication": "arn:aws:resource-groups:us-west-1:019721216575:group/Cove/0940rka383ta3rao1xj5k087y5"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:019721216575:vpc-endpoint/vpce-0453360ceb0084ddd",
            "dns_entry": [
              {
                "dns_name": "vpce-0453360ceb0084ddd-gxf40bsi.secretsmanager.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0453360ceb0084ddd-gxf40bsi-us-west-1c.secretsmanager.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0453360ceb0084ddd-gxf40bsi-us-west-1b.secretsmanager.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "secretsmanager.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z028088625MB6JA1SZHFO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0453360ceb0084ddd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0345be0b387353c4f",
              "eni-0d3764c828e2cc0eb"
            ],
            "owner_id": "019721216575",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a6a673e6849c7d5b"
            ],
            "service_name": "com.amazonaws.us-west-1.secretsmanager",
            "service_region": "us-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.36",
                "subnet_id": "subnet-0e967282ee3d33c2c"
              },
              {
                "ipv4": "10.0.2.218",
                "subnet_id": "subnet-013f11e6358e034b0"
              }
            ],
            "subnet_ids": [
              "subnet-013f11e6358e034b0",
              "subnet-0e967282ee3d33c2c"
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "secretsmanager-endpoint",
              "Project": "CoveApp"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "secretsmanager-endpoint",
              "Project": "CoveApp"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0892f7605b79f0120"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.vpce_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}